<resources>
    <string name="app_name">Stackoverflow</string>

    <!--Login Activity -->
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>


    <!-- Register Activity    -->
    <string name="registration_form">Registration</string>
    <string name="user_name">Enter your username</string>
    <string name="avatar">Enter your url avatar</string>
    <string name="role">Select Role</string>
    <string name="register">REGISTER</string>
    <string name="gmapframe">gmapFrame</string>
    <string-array name="rolesArray">
        <item>Choose Role</item>
        <item>PLAYER</item>
        <item>MANAGER</item>
        <item>ADMIN</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_manager">ManagerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="search_elements">Search elements</string>
    <string name="element_management">Element Management</string>


    <!-- Spinner     -->
    <string-array name="player_filter_spinner">
        <item>All</item>
        <item>Name</item>
        <item>Type</item>
    </string-array>

    <!-- Spinner     -->
    <string-array name="manager_filter_spinner">
        <item>All</item>
        <item>Name</item>
        <item>Type</item>
        <item>Fault</item>
    </string-array>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_search">Search Elements</string>
    <string name="menu_manage">Manage Elements</string>

    <string name="menu_logout">Logout</string>
    <string name="connection">Connection</string>
    <string name="open">open</string>
    <string name="close">close</string>

</resources>
