<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_management"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/menu_manage" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_find_in_page_black_24dp"
            android:title="@string/menu_search" />

    </group>

    <item android:title="@string/connection">
        <menu>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/arrow"
                android:title="@string/menu_logout"/>
        </menu>
    </item>
</menu>
